--- a/bigdime-libraries/bigdime-hive-lib/pom.xml
+++ b/bigdime-libraries/bigdime-hive-lib/pom.xml
@@ -19,7 +19,7 @@
 		<org.apache.hadoop.version>2.4.1</org.apache.hadoop.version>
 		<org.apache.hadoop.hdp2.4.version>2.4.1</org.apache.hadoop.hdp2.4.version>
 		<xerces.version>2.9.1</xerces.version>
-		<com.google.guava.version>14.0.1</com.google.guava.version>
+		<!-- <com.google.guava.version>14.0.1</com.google.guava.version> -->
 	</properties>
 
 	<dependencyManagement>
@@ -123,18 +123,18 @@
 				<artifactId>bigdime-hdfs-lib</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-			<dependency>
+			<!-- <dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
 				<version>${com.google.guava.version}</version>
-			</dependency>
+			</dependency> -->
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
